--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "netflixgpt-1f5e9"
-  }
+    "default": "netflixgpt-1f5e9",
+    " ": "netflixgpt-7658c"
+  },
+  "targets": {},
+  "etags": {}
 }
